  + minetimerplaced: Mine timer (ms) of mines dropped from Mine Deployer
  + bonustime: Bonus time (s) in utility crates
  + bonusflames: Bonus Flamer fuel in ammo crates
  + chanceammo: Per-turn % chance of an ammo crate drop
  + chancetime: Per-turn % chance of an utility crate (extra time) drop
 + Alternative weapon selection with slot keys (F1, F2, F3)
 + Add mine/barrel launch sounds
 + Rewrote mission description and captions
 + Sound and message when trying to fire empty weapon
 * Permanently disable some game modifiers which won't work together with this

HedgeEditor:
 + Dud mine placement mode
 + Allow to select frames in sprite placement mode
 + New placable sprite: sprTargetBee
 + Complete rewrite of all help texts
 + Allow to add and subtract health
 + Add more convenient start values (e.g. for health)
 + Allow to set timer of sticky mines
 + Health crates can now have 0 health
 + Hog and team names (from identity modes) are now translatable
 + Show health/timer above health crates, barrels, mines, sticky mines and air mines
 + Allow to toggle health/timer display with Precise+3
 + Allow to toggle main help at any time with Precise+1
 * Add proper description and name for the gear placement tool (no more fake air attack)
 * Fix many issues with exported files
 * Fix placement mode being changable when gear placement tool is not selected
 * Make land gun spawn in utility crates instead of weapon crates
 * Stop aggressively showing the mission panel after any button press
 * Fix placement modes sometimes showing “nil” in caption
 * Fix girder sprite being displayed at top left for no reason
 * Ammo names are not hardcoded anymore (no more double work for translators)
 * Fix many missing or poor-quality texts for translation
 * Fix error when trying to set ShoppaBalance rank without anything selected
 * Don't show misleading circle when placing girder/rubber
 * Disable timer keys 2-4 in rubber placement mode

Other Game Styles: